Add support for full justification.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
   <label>Hyphenate:</label>
   <input type="checkbox" id="hyphenate">
 </div>
+<div class="slidecontainer">
+  <label>Full Justification:</label>
+  <input type="checkbox" id="fulljustify">
+</div>
+
 </div>
 
 <div id="testbox">
