Rename this to split base UI from per-language font style.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Test line breaking">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Test line breaking</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/base.css">
         <link rel="author" href="humans.txt">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="src/jQuery-FontSpy.js"></script>
