Show more text, which can be handled with the previous optimization.

--- a/gutenberg.html
+++ b/gutenberg.html
@@ -19,13 +19,13 @@
 <div class="controls">
 <div class="slidecontainer">
   <label>Maximum space stretch:</label>
-  <input type="range" min="0" max="500" value="150" class="slider" id="spaceStretch">
-  <span id="spaceStretchValue">1.5</span>
+  <input type="range" min="0" max="500" value="5" class="slider" id="spaceStretch">
+  <span id="spaceStretchValue">0.05</span>
 </div>
 <div class="slidecontainer">
   <label>Maximum space shrink:</label>
-  <input type="range" min="0" max="100" value="20" class="slider" id="spaceShrink">
-  <span id="spaceShrinkValue">0.20</span>
+  <input type="range" min="0" max="100" value="90" class="slider" id="spaceShrink">
+  <span id="spaceShrinkValue">0.90</span>
 </div>
 <div class="slidecontainer">
   <label>Full Justification:</label>
@@ -35,7 +35,8 @@
 </div>
 
 <div id="testbox" style="font-family:'Gutenberg';" data-text-stretch="0" data-text-shrink="0" data-method="font-stretch">
-in principio creavit Deus caelum et terram. terra autem erat inanis et vacua et tenebrae super faciem abyssi et spiritus Dei ferebatur super aquas.
+in principio creavit Deus caelum et terram. terra autem erat inanis et vacua et tenebrae super faciem abyssi et spiritus Dei ferebatur super aquas. dixitque Deus fiat lux et facta est lux.
+et vidit Deus lucem quod esset bona et divisit lucem ac tenebras. appellavitque lucem diem et tenebras noctem factumque est vespere et mane dies unus.
 </div>
 
 <div id="testbox2" style="font-family:'Gutenberg';" class="dlig">
